--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "parcel-bundler": "^1.12.5"
-  }
+  "description": ""
 }
